# paperless-ngx

./: -direnv.nix  .envrc  .gitignore  default.nix  derivation.nix  flake.nix  libmagic-path.patch  pre-commit.sh  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: ci.yml
docs/: administration.rst  configuration.rst  usage_overview.rst
nix-env/: inputs.nix  lock.toml  python.nix  requirements.txt  shell.nix
src-ui/: messages.xlf  package-lock.json
src-ui/src/app/components/document-detail/: document-detail.component.ts
src-ui/src/app/components/document-list/filter-editor/: filter-editor.component.ts
src-ui/src/app/pipes/: custom-date.pipe.ts
src-ui/src/locale/: messages.ar_SA.xlf  messages.be_BY.xlf  messages.cs_CZ.xlf  messages.da_DK.xlf  messages.de_DE.xlf  messages.es_ES.xlf  messages.fi_FI.xlf  messages.fr_FR.xlf  messages.he_IL.xlf  messages.it_IT.xlf  messages.lb_LU.xlf  messages.nl_NL.xlf  messages.pl_PL.xlf  messages.pt_BR.xlf  messages.pt_PT.xlf  messages.ro_RO.xlf  messages.ru_RU.xlf  messages.sl_SI.xlf  messages.sr_CS.xlf  messages.sv_SE.xlf  messages.tr_TR.xlf  messages.zh_CN.xlf
src/documents/: consumer.py  parsers.py  serialisers.py  tasks.py  views.py
src/documents/tests/: test_api.py
src/locale/fi_FI/LC_MESSAGES/: django.po
src/locale/he_IL/LC_MESSAGES/: django.po
src/paperless_mail/: mail.py
src/paperless_mail/tests/: test_mail.py
