[tool.poetry]
name = "paperless-ngx"
version = "1.5.0"
description = ""
authors = ["florian on nixos (Florian Brandes) <florian.brandes@posteo.de>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.9"
dateparser = "~=1.0.0"
django = "~=3.2"
django-cors-headers = "*"
django-extensions = "*"
django-filter = "~=2.4.0"
django-q = "~=1.3.4"
djangorestframework = "~=3.12.2"
filelock = "*"
fuzzywuzzy = {extras = ["speedup"], version = "*"}
gunicorn = "*"
imap-tools = "*"
langdetect = "*"
numpy = "~=1.20.0"
pathvalidate = "*"
pillow = "~=8.1"
pikepdf = "~=2.5"
python-gnupg = "*"
python-dotenv = "*"
python-dateutil = "*"
python-magic = "*"
psycopg2-binary = "*"
redis = "*"
scikit-learn = "==0.24.0"
whitenoise = "~=5.3.0"
watchdog = "~=2.1.0"
whoosh = "~=2.7.4"
inotifyrecursive = "~=0.3.4"
ocrmypdf = "~=12.3"
tqdm = "*"
tika = "*"
channels = "~=3.0"
channels-redis = "*"
uvicorn = {extras = ["standard"], version = "*"}
concurrent-log-handler = "*"
uvloop = "~=0.15"
cryptography = "~=3.4"
"pdfminer.six" = "*"
"backports.zoneinfo" = "*"

[tool.poetry.dev-dependencies]
coveralls = "*"
factory-boy = "*"
pycodestyle = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-env = "*"
pytest-sugar = "*"
pytest-xdist = "*"
sphinx = "~=3.4.2"
sphinx_rtd_theme = "*"
tox = "*"

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
